# taf

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .toml  .travis.yml  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  __init__.py  azure-pipelines.yml  benchmark_thresholds.json  ci-requirements.txt  dev-requirements.txt  exceptions.py  git.py  keys.py  output.json  package.py  pyproject.toml  repository_tool.py  requirements.txt  setup.py  t  taf-complete.sh  taf.err  tox.ini  utils.py  validation.py
.github/: PULL_REQUEST_TEMPLATE.md
api/: metadata.py
docs/: architecture.md  common-issues.md  quickstart.md  repo-creation-and-update-util.md  security-checks.md  setting-up-new-library.md  testing_notes.md  tuf-specification.md  updater.md
keystore/: delegated_role  delegated_role.pub  inner_role  inner_role.pub  keys-description.json  root  root.pub  snapshot  snapshot.pub  targets  targets.pub  timestamp  timestamp.pub
metadata/: 1.root.json  snapshot.json  targets.json  timestamp.json
oll/: tuf_utils.py
resources/: pre-push
specification/: cross-repository-timestamp.md  taf-spec.md
taf/: GitRepository.py  __init__.py  api.py  auth_repo.py  cli.py  config.py  constants.py  developer_tool.py  exceptions.py  git.py  hosts.py  hostsdb.py  init_repo.py  keys.py  keystore.py  log.py  messages.py  pygit.py  repositoriesdb.py  repository.py  repository_tool.py  repository_utils.py  sc_utils.py  settings.py  utils.py  validation.py  yubikey.py
tests/: __init__.py  aggregate_tests.py  conftest.py  issue-531.py  taf.err  (+10 more)
(+1033 files in other folders)
